--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "babel-core": "^6.0.2",
     "gulp-util": "^3.0.0",
+    "lru-cache": "^4.0.0",
     "object-assign": "^4.0.1",
     "replace-ext": "0.0.1",
     "through2": "^2.0.0",
