--- a/package.json
+++ b/package.json
@@ -32,19 +32,19 @@
     "compiler"
   ],
   "dependencies": {
-    "babel-core": "^6.0.2",
-    "gulp-util": "^3.0.0",
-    "lru-cache": "^4.0.0",
-    "object-assign": "^4.0.1",
+    "babel-core": "^6.8.0",
+    "gulp-util": "^3.0.7",
+    "lru-cache": "^4.0.1",
+    "object-assign": "^4.1.0",
     "replace-ext": "0.0.1",
-    "through2": "^2.0.0",
-    "vinyl-sourcemaps-apply": "^0.2.0"
+    "through2": "^2.0.1",
+    "vinyl-sourcemaps-apply": "^0.2.1"
   },
   "devDependencies": {
-    "babel-plugin-transform-es2015-arrow-functions": "^6.0.2",
-    "babel-plugin-transform-es2015-block-scoping": "^6.0.9",
-    "babel-plugin-transform-es2015-classes": "^6.0.8",
-    "gulp-sourcemaps": "^1.1.1",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.8.0",
+    "babel-plugin-transform-es2015-block-scoping": "^6.8.0",
+    "babel-plugin-transform-es2015-classes": "^6.8.0",
+    "gulp-sourcemaps": "^2.0.0-alpha",
     "mocha": "*",
     "xo": "*"
   },
